// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/NoteItem/NoteHeader renders closed 1`] = `
<styled.header
  open={false}
>
  <styled.div>
    <styled.h2>
      Note Title
    </styled.h2>
    <styled.div>
      <styled.div>
        Invalid date
      </styled.div>
      <styled.div>
        ...
      </styled.div>
    </styled.div>
    <styled.div>
      Note Category
    </styled.div>
  </styled.div>
  <styled.button
    onClick={[MockFunction]}
  >
    <Icon
      icon={
        Array [
          "fas",
          "chevron-down",
        ]
      }
    />
  </styled.button>
</styled.header>
`;

exports[`Components/NoteItem/NoteHeader renders open 1`] = `
<styled.header
  open={true}
>
  <styled.div>
    <styled.h2>
      <span>
        Note Title
        <EditButton
          onClick={[MockFunction]}
        />
      </span>
    </styled.h2>
  </styled.div>
  <styled.button
    onClick={[MockFunction]}
  >
    <Icon
      icon={
        Array [
          "fas",
          "chevron-up",
        ]
      }
    />
  </styled.button>
</styled.header>
`;
